# NovatraBot

./: .env  .env.example  .gitignore  LICENSE  README.md  accountability.db  bot.py  get_linear_ids.py  index.html  moderation.db  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
data/: index.html  links.json
handlers/: ai.py  help.py  link_embed.py  links.py  moderation.py  reaction.py
utilities/: __init__.py  accountability.py  credentials.json  feedback.py  links_sync.py  status.py
utilities/accountability/: accountability.py  commands.py  database.py  helpers.py
utilities/databases/: __init__.py  link_database.py  task_database.py
utilities/links/: __init__.py  classifier.py  utils.py
utilities/tasks/: __init__.py  linear.py  utils.py  views.py
